# InfProjekt

./: :)  CMakeLists.txt  filetypes.xml  github.xml  helpers.cpp  helpers.h  helpers.hpp  main.cpp  nodes.cpp  nodes.h  nodes.hpp  other.xml  package.cpp  package.h  package.hpp  project.default.xml  storage_types.cpp  storage_types.h  storage_types.hpp  types.h  updates.xml  vcs.xml
_windows/: cpp.toolchains.xml  git.xml
codestyles/: Default.xml
